@@ -20,9 +20,11 @@ Normally this is done by either adding an entry for
 adding <tt>/sbin/runsvdir-start</tt> to the system's <tt>StartupItems</tt>.
 <p>
 In any case, you first need to copy the <i>stage 2</i> script to
-<tt>/sbin/runsvdir-start</tt>:
+<tt>/sbin/runsvdir-start</tt>, and create the service directory
+<tt>/var/service</tt>:
 <pre>
   # install -m0750 /package/admin/runit/etc/2 /sbin/runsvdir-start
+  # mkdir -p /var/service
 </pre>
 <hr>
 <a href="#sysv">How to use with sysvinit</a><br>
@@ -37,7 +39,7 @@ file, do:
   SV:123456:respawn:/sbin/runsvdir-start
   EOT
 </pre>
-and tell <i>init</i> to reread its configuration, e.g.:
+and tell <i>init</i> to re-read its configuration, e.g.:
 <pre>
   # init q
 </pre>
